@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-15T16:24:26Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-10-16T01:56:57Z",
+  "count" : 5,
+  "count_minmax" : [ 2, 5 ],
+  "count_decinc" : [ -0, +5 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
