@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-15T16:24:26Z",
-  "count_outdated" : 584,
-  "uniques_outdated" : 334,
-  "count" : 605,
-  "uniques" : 346,
+  "timestamp" : "2022-10-16T01:56:57Z",
+  "count_outdated" : 590,
+  "uniques_outdated" : 337,
+  "count" : 611,
+  "uniques" : 348,
   "clones" : [
-    {
-      "timestamp": "2022-10-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 6 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
-    },
     {
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
@@ -63,10 +56,10 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
