@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-10-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -44,8 +39,8 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
