@@ -1,3 +1,11 @@
+2022-10-16T01:56:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3257892985 # 939
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 334 584 / 346 605
+* notice: next accum: outdated-unq outdated-all / unq all: 337 590 / 348 611
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +5 -0 -0 / 3 5
+* notice: removed / changed dates: [2022-10-01] / [2022-10-15]
+
 2022-10-15T16:24:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3256360937 # 938
 * notice: last 14d: unq all: 5 21
